fix multitext spacing and other small things

--- a/src/main/webapp/res/oauth2cloud.css
+++ b/src/main/webapp/res/oauth2cloud.css
@@ -109,3 +109,11 @@ table.vertical-align-middle td {
     right: 0.5em;
     top: 0.5em;
 }
+
+.multitext-value {
+    margin-bottom: 0.5em;
+}
+
+td .pull-right .dropdown {
+    margin: 0.5em;
+}
